<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <data>
        <variable
            name="myName"
            type="com.example.aboutme.My_name" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/name_text"
            style="@style/nameStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nick_name"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <Button
            android:id="@+id/nickname_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/layout_margin"
            android:fontFamily="serif-monospace"
            android:shadowColor="#00834040"
            android:text="@string/done"
            android:textAlignment="center"
            android:visibility="visible" />

        <TextView
            android:id="@+id/nickname_text"
            style="@style/nameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@={myName.nickname}"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/star_image"
            style="@style/yellow_star"
            android:layout_marginTop="@dimen/layout_margin"
            android:contentDescription="@string/yellow_star"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ScrollView
            android:id="@+id/bio_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/padding"
            android:layout_marginEnd="@dimen/padding"
            android:layout_marginBottom="@dimen/padding">

            <TextView
                android:id="@+id/bio_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/name_size"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/aboutme" />
        </ScrollView>

    </LinearLayout>
</layout>